fix alignment of comment_reply_form

--- a/helium/src/scss/blocks/_comments.scss
+++ b/helium/src/scss/blocks/_comments.scss
@@ -111,6 +111,10 @@ $LEFT_INDENT_SUBCOMMENT: 24px;
     padding: 1px 6px;
   }
 
+  .comment_reply_form {
+    margin-left: 60px;
+  }
+
   .comment_edit {
     display: block;
     text-align: right;
